Fixed navigation on mobile

--- a/styles/app.css
+++ b/styles/app.css
@@ -39,30 +39,21 @@ body {
 }
 
 /*reactroot div*/
-#root > div {
-  min-width: 34vw;
-  max-width: 1200px;
-  padding: 3vh 0 12vh 0;
+/*#root > div {*/
+  /*min-width: 34vw;*/
+  /*padding: 3vh 0 12vh 0;*/
 
-  /*center based on vw to prevent content jump when vertical scroll bar show/hide
-  note: vw/vh include the width of scroll bars*/
-  position: relative;
-  left: 50vw;
-  -webkit-transform: translate(-50%, 0);
-  -moz-transform: translate(-50%, 0);
-  -ms-transform: translate(-50%, 0);
-  -o-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
-}
+  /*!*center based on vw to prevent content jump when vertical scroll bar show/hide*/
+  /*note: vw/vh include the width of scroll bars*!*/
+  /*position: relative;*/
+  /*left: 50vw;*/
+  /*-webkit-transform: translate(-50%, 0);*/
+  /*-moz-transform: translate(-50%, 0);*/
+  /*-ms-transform: translate(-50%, 0);*/
+  /*-o-transform: translate(-50%, 0);*/
+  /*transform: translate(-50%, 0);*/
+/*}*/
 
-/*use responsive max-width to simulate padding/margin to allow
-space for vertical scroll bar without creating horizontal scroll bar
-(if there is padding, the window will scroll horizontally to show the padding) */
-@media (max-width: 540px) {
-  #root > div {
-    max-width: calc(100vw - 40px);
-  }
-}
 
 /*links*/
 a {
